objects/Listing_Asset__c.object
<CustomObject>
    <fields>
        <fullName>Caption__c</fullName>
        <label>Caption</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentVersion_Id__c</fullName>
        <inlineHelpText>This is the ContentVersion record Id of the associate file. This field is set by LWC using the AssetService class. This field also may have package id if asset type is install</inlineHelpText>
        <label>Asset Content Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Section__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>Link</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Resource__c</fullName>
        <label>Customer Resource</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Section__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Testimonial</fullName>
                </value>
                <value>
                    <fullName>Whitepaper</fullName>
                </value>
                <value>
                    <fullName>Case Study</fullName>
                </value>
                <value>
                    <fullName>Data Sheet</fullName>
                </value>
                <value>
                    <fullName>Customization Guide</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Listing__c</fullName>
        <label>Listing</label>
        <referenceTo>Listing__c</referenceTo>
        <relationshipLabel>Listing Assets</relationshipLabel>
        <relationshipName>Listing_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tile Logo</fullName>
                </value>
                <value>
                    <fullName>Tile Image</fullName>
                </value>
                <value>
                    <fullName>Carousel</fullName>
                </value>
                <value>
                    <fullName>Demo Video</fullName>
                </value>
                <value>
                    <fullName>Customer Resource</fullName>
                </value>
                <value>
                    <fullName>Download</fullName>
                </value>
                <value>
                    <fullName>Install</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Listing Asset</label>
    <nameField>
        <displayFormat>LA-{00000000}</displayFormat>
        <label>Listing Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listing Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>